--- a/index.html
+++ b/index.html
@@ -6,16 +6,18 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
-  h1, a {
-    text-align: center; /* 让 h1 和 a 标签中的文字居中 */
-    display: block; /* 确保 a 标签可以居中 */
-    margin: 0 auto; /* 让 h1 和 a 居中显示 */
+
+   body {
+    text-align: center;
   }
 </style>
 </head>
 <body>
 
 <h1 style="font-size:100px;">虎科統計資料</h1>
+<h2 style="font-size:30px;">點擊</h2>
+
+
 
 <a href="https://www.youtube.com/watch?v=V2AS7MwObp4">
   <img src="https://play-lh.googleusercontent.com/Y5KL71adt-8xXSo6shZzW09fM0gXaYT2YjEMzd_0Tab9Qk07nW25U_DQPN0H5A4BJ90l=w240-h480-rw" alt="HTML tutorial" style="width:350px;height:350px;">
@@ -33,7 +35,9 @@
 </script>
 
 <iframe src="homework.html" height="500" width="900"></iframe>
-<iframe src="https://www.youtube.com/watch?v=HJZZKCznI0U" height="500" width="900"></iframe>
+<iframe width="900" height="500" src="https://www.youtube.com/embed/HJZZKCznI0U" 
+  
+</iframe>
 
 </body>
 </html>
