--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <iframe src="homework.html" height="500" width="900"></iframe>
 <iframe width="900" height="500" src="https://www.youtube.com/embed/HJZZKCznI0U" 
-  
+  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
 
 </body>
