--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
 <a href="https://www.youtube.com/watch?v=V2AS7MwObp4">
-  <img src="https://play-lh.googleusercontent.com/Y5KL71adt-8xXSo6shZzW09fM0gXaYT2YjEMzd_0Tab9Qk07nW25U_DQPN0H5A4BJ90l=w240-h480-rw" alt="HTML tutorial" style="width:350px;height:350px;">
+  <img src="https://play-lh.googleusercontent.com/Y5KL71adt-8xXSo6shZzW09fM0gXaYT2YjEMzd_0Tab9Qk07nW25U_DQPN0H5A4BJ90l=w240-h480-rw" alt="HTML tutorial" style="max-width:100%;height:auto;">
 </a>
 
 <div id="myPlot" style="width:100%;max-width:1000px;margin:auto;"></div>
