--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
   Plotly.newPlot("myPlot", data, layout);
 </script>
 
-<iframe src="homework.html" height="500" width="900"></iframe>
-<iframe width="900" height="500" src="https://www.youtube.com/embed/HJZZKCznI0U" 
+<iframe src="homework.html" height="800" width=100% ></iframe>
+<iframe width=100% height="800" src="https://www.youtube.com/embed/HJZZKCznI0U" 
   frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
 
